2004-06-03  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Build shared library as well as static (using libtool)

	* Change FUSE_MINOR_VERSION from 1 to 0.  I know it's illegal but
	there has not been a release with the previous minor number, and I
	hope nobody is using it for anything.
	
2004-05-18  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added flush() call
	
2004-05-04  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Extended attributes support for 2.4 (patch by Cody Pisto)
	
2004-04-20  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fixed parser with modversions (Mattias Wadman)
	
2004-04-19  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added mount option parser to 2.4 build
	
2004-04-13  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Replaced binary mount data with text options

	* Show FUSE specific mount options in /proc/mounts

	* Check in fuse.h whether _FILE_OFFSET_BITS is set to 64

2004-04-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Check some limits so userspace won't get too big requests

2004-04-05  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Kill compile warning

	* Upgraded user-mount patch for 2.6.5

2004-04-02  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Add detection of user-mode-linux to configure

2004-03-31  Miklos Szeredi <mszeredi@inf.bme.hu>

	* fixed zero size case for getxattr and listxattr

2004-03-30  Miklos Szeredi <mszeredi@inf.bme.hu>

	* new fusermount flag '-z': lazy unmount, default is not lazy

	* Extended attributes operations added (getxattr, setxattr,
	listxattr, removexattr)

2004-03-25  Miklos Szeredi <mszeredi@inf.bme.hu>

	* If filesystem doesn't define a statfs operation, then an
	all-zero default statfs is returned instead of ENOSYS

2004-03-24  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Add FS_BINARY_MOUNTDATA filesystem flag for kernels > 2.6.4

2004-03-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix for uClinux (Christian Magnusson)

2004-03-02  Miklos Szeredi <mszeredi@inf.bme.hu>

	* fuse_main() adds "-n progname" to the fusermount command line
	