@@ -5,6 +5,11 @@
 	* Change FUSE_MINOR_VERSION from 1 to 0.  I know it's illegal but
 	there has not been a release with the previous minor number, and I
 	hope nobody is using it for anything.
+
+	* Change fuse_main(), so that default behavior is to go into
+	background if mount is successful.  '-f' and '-d' options disable
+	backgrounding.  This fixes the "Why does my FUSE daemon hang?"
+	newbie complaint.
 	
 2004-05-18  Miklos Szeredi <mszeredi@inf.bme.hu>
 
